# RecSys_ACM_2026_Hallucinated

./: README.md
data/blind_b_responses/final_pipeline/: run_config.yaml  step1_responses.json  step1_responses_checkpoint.jsonl  step2_compressed.json  step2_compressed_checkpoint.jsonl  step3_clean.json  (+1 more)
data/splitK/: splitK_assignment.parquet  splitK_assignment_manifest.json
src/: merge_submission.py
src/basic_candidate_generators/: README_REGEN_CG_DATASETS.md  pyproject.toml
src/bert4rec/: README.md
src/bert4rec/src/basic_candidate_generators/: pyproject.toml
src/bert4rec/src/basic_candidate_generators/configs/: query_full_multibehav_alltext_softor_ndcg.yaml  query_full_multibehav_alltext_softor_recall.yaml  split_hidim_xattn_hardneg_ndcg.yaml  split_hidim_xattn_hardneg_query_full_dif_ndcg.yaml  split_hidim_xattn_hardneg_query_full_noiserobust_recall.yaml  split_hidim_xattn_hardneg_query_full_nova_ndcg.yaml
src/bert4rec/src/basic_candidate_generators/launchers_crossvalidation/: _cv_utils.py  retrain_and_export.py
src/bert4rec/src/basic_candidate_generators/src/: BaseRecommender.py
src/bert4rec/src/basic_candidate_generators/src/recommenders/: fallback.py  feature_bert4rec.py  feature_bert4rec_identity.py  feature_bert4rec_identity_cosine.py  feature_bert4rec_identity_cosine_rope.py  feature_bert4rec_identity_cosine_rope_goal.py  feature_bert4rec_identity_cosine_rope_mmh.py  feature_bert4rec_identity_cosine_rope_mmh_icm.py  feature_bert4rec_identity_cosine_rope_mmh_icm_hardneg.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg_query.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg_query_full.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg_query_full_dif.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg_query_full_multibehav.py  feature_bert4rec_identity_cosine_rope_mmh_icm_split_hidim_xattn_hardneg_query_full_nova.py  feature_bert4rec_identity_cosine_rope_mmh_icm_xattn.py  feature_bert4rec_noise_robust.py  feature_bert4rec_user_helpers.py  interactions.py  session_base.py  user_base.py
src/heuristic/: 96_graft_turn1.py  98_top1_graft.py  README.md  pyproject.toml
src/heuristic/emblib/old/data/: parsing.py  split.py  user_features.py
src/heuristic/emblib/old/encoders/: base.py  hf_native_frozen.py  hf_projected.py  keyword_qwen3.py  native_frozen.py  qwen3_frozen.py  qwen3_lora.py  qwen3_native_frozen.py
src/heuristic/emblib/old/evaluation/: recall.py
src/heuristic/emblib/old/qwen/: config.py  qwen_embeddings.py
src/heuristic/emblib/old/tracks/: organizer_track_loader.py  qwen_track_loader.py  text_track_loader.py
src/heuristic/emblib/old/training/: early_stopping.py  lora_trainer.py
src/heuristic/emblib/retrieval/: __init__.py  config.py  core.py  gambling.py  heuristic_qwen_fallback.py  instruction_prompts.json  instruction_prompts.py  instruction_prompts_v2_spec.json  instruction_prompts_v3_contrastive.json  instruction_prompts_v4_goalverbatim.json  paths.py  query_instructions.py  qwen_embeddings.py  qwen_fallback.py  rerankers.py  splitk_caches.py  tfidf_submission.py
src/heuristic/scripts/: 00_get_datasets.py  01_make_split.py  01b_rebuild_split.py  03_encode_queries.py  12_encode_gambling_caches.py  _encoders_factory.py
src/heuristic/scripts/launchers/: gambling_updated.py
src/heuristic/scripts/old/: 01_make_split_v2.py  02_mine_hard_negatives.py  03_encode_queries.py  04_encode_tracks.py  04b_encode_qwen_tracks.py  05_train_encoder.py  06_evaluate.py  06b_evaluate_ndcg.py  07_compare_all.py  08_try_embedding_models.py  08b_encode_blinda_qwen_fallback.py  08c_encode_tracks_qwen_fallback.py  09_rerank_jina_v3.py  10_rerank.py  11_fuse_candidates.py  13_precompute_jina_qwen_recs.py  13_precompute_reranked_qwen_recs.py
src/impute_cat_spec/: README.md
src/lower_bound_optimization/: pyproject.toml
src/lower_bound_optimization/launchers/: s06_distribution_shift_v2.py  s07_eval_on_blind_like_subsets.py  s07b_eval_all_cgs.py  s08_compare_recs.py
src/lower_bound_optimization/src/lbo/: paths.py
src/lower_bound_optimization/src/lbo/evaluator/: __init__.py  blind_like.py  evaluator.py  holdout_features.py  metrics.py  plots.py  samplers.py  stratification.py
src/lower_bound_optimization/src/lbo/shift/: assemble.py  augment.py  calibration.py  classifiers.py  embeddings.py  features.py  holdout.py  multi_comp.py  tracks.py  tune_v2.py  weights.py
src/reranker_oof/: RERANKER_README.md  pyproject.toml
src/reranker_oof/configs/blind_no_filter/: dataset.yaml  rrf_best.yaml  xgb_v5.yaml
src/reranker_oof/configs/blind_v5/: dataset.yaml  rrf_best.yaml  xgb_v5.yaml
src/reranker_oof/launchers_overfit_blind_b/: __init__.py  _common.py  _rerank.py  s01_tune_rrf.py  s02_export_best_rrf.py  s03_assemble_dataset.py  s05_tune_xgb.py  s06_retrain_submit.py  s06b_submit_from_boosters.py  s06c_blind_b_only.py  train_cg_calibrators.py
src/reranker_oof/src/: __init__.py  eval.py  paths.py
src/reranker_oof/src/features/: __init__.py  cg_calibration.py  emb_features.py  feature_builder.py  fusion_select.py  holdout_subsets.py  pipeline.py  pool.py  resources.py  sentiment.py
src/reranker_oof/src/rerankers/: __init__.py  base.py  parquet_iter.py  xgb_ranker.py
src/resp_blind_b/: README.md  final_pipeline.py  generate_viewer.py  pipeline.html  pyproject.toml  viewer.html
src/resp_blind_b/config/: models.yaml  pipeline.yaml
src/resp_blind_b/prompts/: baseline.txt  bigram_removal_multi_target.txt  compress_v14.txt
src/resp_blind_b/src/: diversity.py  prompt.py  summary.py
src/resp_blind_b/src/utils/: bigrams.py  check.py  config.py  resources.py  status.py
src/resp_blind_b/templates/: bigram_removal_multi_target.j2  compress.j2
src/splits/: pyproject.toml
src/splits/launchers/: explode_blind.py  splitK_crossvalidation.py
(+284 files in other folders)
