[project]
# UV package for the OOF reranker pipeline.
#
# This package consumes the cross-validated candidate-generator (CG) artifacts
# produced under {repo_root}/models/CG_crossvalidation/<cg>/datasets/ and turns
# them into a unified reranker dataset, trains gradient-boosted / neural
# rerankers on top, performs Optuna hyperparameter tuning, evaluates against
# multiple holdout subsets, and produces a Blind-A submission.
#
# All artifacts (datasets, plots, reports, submissions, optuna DBs) live under
# {repo_root}/models/reranker_oof/. Code lives in this directory only.
name = "reranker-oof"
version = "0.1.0"
description = "OOF reranker pipeline: feature builder + multi-backend rerankers + Optuna tuning + holdout eval + Blind-A submission."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core data stack — reused from basic_candidate_generators for compatibility
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    # Gradient boosted rerankers (all GPU-capable)
    "xgboost>=3.2.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    # NN reranker (MLP listwise + SVGD ensemble)
    "torch>=2.8.0",
    # Hyperparameter tuning
    "optuna>=4.0.0",
    "optuna-dashboard>=0.20.0",
    "cupy-cuda12x>=14.1.1",
    "statsmodels>=0.14.6",
    "shap>=0.46.0",
    "vadersentiment>=3.3.2",
]

# CUDA-enabled torch via the explicit pytorch CUDA wheel index (cu128 chosen to
# match the basic_candidate_generators package). If you switch GPU/driver, edit
# both packages in lockstep.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

# Run via ``uv run python -m launchers_*`` — no buildable wheel needed.
[tool.uv]
package = false
