[project]
name = "splits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "pybase64>=1.4.0",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
    "numba>=0.65.1",
    "scikit-learn>=1.7.2",
    "optuna>=4.0.0",
    "optuna-dashboard>=0.20.0",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "huggingface-hub>=1.20.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
